# sfml-starter

./: CMakeLists.txt  config.h.in  main.cpp
cmake_modules/: FindSFML.cmake
